# easings

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: main.cc
lib/: easings.hh
lib/ease/: easer.hh  functions.hh
